# openapi-specs.json
@@ -1,30 +1,23 @@
 {
-  "openapi": "3.1.0",
+  "openapi": "3.0.0",
   "info": {
-    "title": "Contract-Driven API Development with tRPC and OpenAPI",
+    "title": "Contract-Driven API Development with Hono and OpenAPI",
     "version": "1.0.0"
   },
-  "servers": [
-    {
-      "url": "http://localhost:8000/api"
-    }
-  ],
+  "components": {
+    "schemas": {},
+    "parameters": {}
+  },
   "paths": {
     "/todos": {
       "get": {
-        "operationId": "todos-getAllTodos",
-        "description": "Returns a list of all todos",
         "tags": [
           "Todo"
         ],
-        "security": [
-          {
-            "Authorization": []
-          }
-        ],
+        "description": "Returns a list of all todos",
         "responses": {
           "200": {
-            "description": "Successful response",
+            "description": "List of all todos",
             "content": {
               "application/json": {
                 "schema": {
@@ -44,66 +37,27 @@
                             "description": "Title of the todo"
                           },
                           "description": {
-                            "anyOf": [
-                              {
-                                "type": "string"
-                              },
-                              {
-                                "type": "null"
-                              }
-                            ],
+                            "type": "string",
+                            "nullable": true,
                             "description": "Description of the todo"
                           },
                           "isCompleted": {
+                            "type": "boolean",
                             "default": false,
-                            "description": "Whether the todo is completed or not",
-                            "type": "boolean"
+                            "description": "Whether the todo is completed or not"
                           }
                         },
                         "required": [
                           "id",
-                          "title",
-                          "isCompleted"
-                        ],
-                        "additionalProperties": false
+                          "title"
+                        ]
                       },
                       "description": "List of all todos"
                     }
                   },
                   "required": [
                     "todos"
-                  ],
-                  "additionalProperties": false
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Authorization not provided",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/error.UNAUTHORIZED"
-                }
-              }
-            }
-          },
-          "403": {
-            "description": "Insufficient access",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/error.FORBIDDEN"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal server error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/error.INTERNAL_SERVER_ERROR"
+                  ]
                 }
               }
             }
@@ -111,19 +65,11 @@
         }
       },
       "post": {
-        "operationId": "todos-createTodo",
-        "description": "Creates a new todo",
         "tags": [
           "Todo"
         ],
-        "security": [
-          {
-            "Authorization": []
-          }
-        ],
-        "parameters": [],
+        "description": "Creates a new todo",
         "requestBody": {
-          "required": true,
           "content": {
             "application/json": {
               "schema": {
@@ -145,8 +91,8 @@
           }
         },
         "responses": {
-          "200": {
-            "description": "Successful response",
+          "201": {
+            "description": "Created todo",
             "content": {
               "application/json": {
                 "schema": {
@@ -164,265 +110,30 @@
                           "description": "Title of the todo"
                         },
                         "description": {
-                          "anyOf": [
-                            {
-                              "type": "string"
-                            },
-                            {
-                              "type": "null"
-                            }
-                          ],
+                          "type": "string",
+                          "nullable": true,
                           "description": "Description of the todo"
                         },
                         "isCompleted": {
+                          "type": "boolean",
                           "default": false,
-                          "description": "Whether the todo is completed or not",
-                          "type": "boolean"
+                          "description": "Whether the todo is completed or not"
                         }
                       },
                       "required": [
                         "id",
-                        "title",
-                        "isCompleted"
-                      ],
-                      "additionalProperties": false
+                        "title"
+                      ]
                     }
                   },
                   "required": [
                     "todo"
-                  ],
-                  "additionalProperties": false
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid input data",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/error.BAD_REQUEST"
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Authorization not provided",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/error.UNAUTHORIZED"
-                }
-              }
-            }
-          },
-          "403": {
-            "description": "Insufficient access",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/error.FORBIDDEN"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal server error",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/error.INTERNAL_SERVER_ERROR"
+                  ]
                 }
               }
             }
           }
         }
-      }
-    }
-  },
-  "components": {
-    "schemas": {
-      "error.UNAUTHORIZED": {
-        "type": "object",
-        "properties": {
-          "message": {
-            "type": "string",
-            "description": "The error message",
-            "example": "Authorization not provided"
-          },
-          "code": {
-            "type": "string",
-            "description": "The error code",
-            "example": "UNAUTHORIZED"
-          },
-          "issues": {
-            "description": "An array of issues that were responsible for the error",
-            "example": [],
-            "type": "array",
-            "items": {
-              "type": "object",
-              "properties": {
-                "message": {
-                  "type": "string"
-                }
-              },
-              "required": [
-                "message"
-              ],
-              "additionalProperties": false
-            }
-          }
-        },
-        "required": [
-          "message",
-          "code"
-        ],
-        "additionalProperties": false,
-        "title": "Authorization not provided error (401)",
-        "description": "The error information",
-        "example": {
-          "code": "UNAUTHORIZED",
-          "message": "Authorization not provided",
-          "issues": []
-        }
-      },
-      "error.FORBIDDEN": {
-        "type": "object",
-        "properties": {
-          "message": {
-            "type": "string",
-            "description": "The error message",
-            "example": "Insufficient access"
-          },
-          "code": {
-            "type": "string",
-            "description": "The error code",
-            "example": "FORBIDDEN"
-          },
-          "issues": {
-            "description": "An array of issues that were responsible for the error",
-            "example": [],
-            "type": "array",
-            "items": {
-              "type": "object",
-              "properties": {
-                "message": {
-                  "type": "string"
-                }
-              },
-              "required": [
-                "message"
-              ],
-              "additionalProperties": false
-            }
-          }
-        },
-        "required": [
-          "message",
-          "code"
-        ],
-        "additionalProperties": false,
-        "title": "Insufficient access error (403)",
-        "description": "The error information",
-        "example": {
-          "code": "FORBIDDEN",
-          "message": "Insufficient access",
-          "issues": []
-        }
-      },
-      "error.INTERNAL_SERVER_ERROR": {
-        "type": "object",
-        "properties": {
-          "message": {
-            "type": "string",
-            "description": "The error message",
-            "example": "Internal server error"
-          },
-          "code": {
-            "type": "string",
-            "description": "The error code",
-            "example": "INTERNAL_SERVER_ERROR"
-          },
-          "issues": {
-            "description": "An array of issues that were responsible for the error",
-            "example": [],
-            "type": "array",
-            "items": {
-              "type": "object",
-              "properties": {
-                "message": {
-                  "type": "string"
-                }
-              },
-              "required": [
-                "message"
-              ],
-              "additionalProperties": false
-            }
-          }
-        },
-        "required": [
-          "message",
-          "code"
-        ],
-        "additionalProperties": false,
-        "title": "Internal server error error (500)",
-        "description": "The error information",
-        "example": {
-          "code": "INTERNAL_SERVER_ERROR",
-          "message": "Internal server error",
-          "issues": []
-        }
-      },
-      "error.BAD_REQUEST": {
-        "type": "object",
-        "properties": {
-          "message": {
-            "type": "string",
-            "description": "The error message",
-            "example": "Invalid input data"
-          },
-          "code": {
-            "type": "string",
-            "description": "The error code",
-            "example": "BAD_REQUEST"
-          },
-          "issues": {
-            "description": "An array of issues that were responsible for the error",
-            "example": [],
-            "type": "array",
-            "items": {
-              "type": "object",
-              "properties": {
-                "message": {
-                  "type": "string"
-                }
-              },
-              "required": [
-                "message"
-              ],
-              "additionalProperties": false
-            }
-          }
-        },
-        "required": [
-          "message",
-          "code"
-        ],
-        "additionalProperties": false,
-        "title": "Invalid input data error (400)",
-        "description": "The error information",
-        "example": {
-          "code": "BAD_REQUEST",
-          "message": "Invalid input data",
-          "issues": []
-        }
-      }
-    },
-    "securitySchemes": {
-      "Authorization": {
-        "type": "http",
-        "scheme": "bearer"
       }
     }
   }
